# plato-surrogate

./: README.md  agent.py  pyproject.toml
plato_surrogate/: __init__.py
plato_surrogate.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_surrogate.py
